# toms_blog

./: README.md  pyproject.toml  requirements.txt
blog_app/: app.py  pages.py
