[tool.poetry]
name = "toms_blog"
version = "0.1.0"
description = ""
authors = ["andrew.vangilder <andrew.vangilder@tempus.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
dash = "^2.0.0"

[tool.poetry.dev-dependencies]
dash-bootstrap-components = "^1.0.1"
Flask = "^2.0.2"
pandas = "^1.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
